# rush_falls

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  pyproject.toml
docs/: clustered_auroc_methodology.md
docs/plans/: 2026-03-18-feat-pmfrs-vs-morse-validation-study-plan.md
docs/solutions/code-quality/: jama-figure-title-placement-and-layout-ordering.md  marimo-notebook-p3-cleanup.md
docs/solutions/integration-issues/: node-script-rewrite-python-docx.md
docs/solutions/logic-errors/: etable-naming-inconsistency-and-missing-tripod-cells.md  missing-epic-threshold-annotations-and-optimal-cutoffs.md
docs/solutions/maintenance/: stale-messaging-audit-notebooks-docs.md
notebooks/: 01_data_discovery.py  02_cohort_flow.py  03_table1.py  03b_recalibration.py  04_primary_analysis.py  05_calibration.py  06_decision_curve.py  07_threshold_analysis.py  08_reclassification.py  09_fairness_audit.py  10_sensitivity_analyses.py  11_dot_plot.py  12_report.py  13_master_report.py  14_time_dependent_auc.py
scripts/: generate_docx_tables.py
utils/: __init__.py  cluster_auroc.py  constants.py  metrics.py  plotting.py  test_cluster_auroc.py
