[project]
name = "rushfalla"
version = "0.1.0"
description = "Clinical validation: PM-FRS vs Morse Fall Scale"
readme = "CLAUDE.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "JCR" }]

dependencies = [
    "polars>=1.0",
    "scikit-learn>=1.5",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "dcurves>=1.1",
    "great-tables>=0.18",
    "openpyxl>=3.1",
    "fastexcel>=0.19.0",
    "python-docx>=1.2.0",
]

[dependency-groups]
dev = [
    "marimo[recommended]>=0.12",
    "ruff>=0.9",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pyright>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.uv]
# Prefer binary wheels for faster installs
compile-bytecode = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "NPY",  # numpy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (common in stats: l, O, I)
    "F841",   # local variable assigned but never used (marimo cell locals)
]

[tool.ruff.lint.per-file-ignores]
# Marimo notebooks: allow unused expressions (cell display output)
"notebooks/*.py" = ["B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportUnusedExpression = false
